# cmake

./: README.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  main.cc
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt
t3/usr/lib/: libhello.so.1.2
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
