cmake_minimum_required(VERSION 2.6)
PROJECT(HELLO)
ADD_SUBDIRECTORY(src bin)

#安装路径为 CMAKE_INSTALL_PREFIX 默认为/usr/local/
#INSTALL(TARGETS hello RUNTIME DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS build/bin/hello DESTINATION bin)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
